--- a/web/menuAlumno.xhtml
+++ b/web/menuAlumno.xhtml
@@ -3,21 +3,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
-    <h:body>
-        <h:form>          
-            <h:selectOneMenu id="seleccionCurso" value="#{cargarExamen.idImparticion}">
-                <f:selectItems value="#{login.listaMatriculadas}"
-                               var="c"
-                               itemValue="#{c.idImparticion.idImparticion}"
-                               itemLabel="#{c.idImparticion.nombre}"/>
-            </h:selectOneMenu><br/><br/>
-            <h:commandButton value="Ir a Examen" action="#{cargarExamen.cargar()}"></h:commandButton>
-            <h:commandButton value="Ir a Temario" action="index"></h:commandButton>
-        </h:form>      
+    <h:body>  
+        <!-- Da problemas raros con el idImpartición, no parece reconocerlo, será por esto que fallan todos los select one menu, esperarán un string o algo concreto, buscar por ahí-->
+        <p:panel header="Alta de cursos">   
+            <h:form> 
+                Introduce el código del curso: <p:inputText value="#{cargarExamen.idImparticion}" />    
+                <p:commandButton value="Ir a Examen" action="#{cargarExamen.cargar()}"/>
+                <p:commandButton value="Ir a Temario" action="index"/>
+            </h:form>       
+        </p:panel>
     </h:body>
 </html>
 
